// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders disabled time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper disabled radius"
  >
    <span
      style="display:inline-block"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="zw-icon za-time__select-icon zw-icon--time-circle zw-icon--default zw-icon--md"
          theme="default"
          type="time-circle"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
          >
            <use
              href="#time-circle"
            />
          </svg>
        </i>
      </div>
    </span>
  </div>
</div>
`;

exports[`TimePicker renders disabled time-select correctly 1`] = `
<div
  class="za-time__select"
>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="zw-menu zw-menu--light zw-menu--inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="zw-menu zw-menu--light zw-menu--inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="zw-menu zw-menu--light zw-menu--inline"
        role="menu"
      />
    </span>
  </span>
</div>
`;

exports[`TimePicker renders isRadius time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper radius"
    style="width:160px"
  >
    <span
      style="display:inline-block"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="zw-icon za-time__select-icon zw-icon--time-circle zw-icon--default zw-icon--md"
          theme="default"
          type="time-circle"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
          >
            <use
              href="#time-circle"
            />
          </svg>
        </i>
      </div>
    </span>
  </div>
</div>
`;

exports[`TimePicker renders normal time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper radius"
  >
    <span
      style="display:inline-block"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="zw-icon za-time__select-icon zw-icon--time-circle zw-icon--default zw-icon--md"
          theme="default"
          type="time-circle"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
          >
            <use
              href="#time-circle"
            />
          </svg>
        </i>
      </div>
    </span>
  </div>
</div>
`;
